RESOLVED FIXED169657
WebContent crash due to bad variant access in WebKit: WebKit::WebPage::expandedRangeFromHandle
https://bugs.webkit.org/show_bug.cgi?id=169657
Summary WebContent crash due to bad variant access in WebKit: WebKit::WebPage::expand...
Wenson Hsieh
Reported 2017-03-14 21:37:46 PDT
The WebContent process may crash in unionDOMRanges if Range::compareBoundaryPoints throws an exception.
Attachments
Patch (2.50 KB, patch)
2017-03-14 21:42 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-03-14 21:38:10 PDT
Wenson Hsieh
Comment 2 2017-03-14 21:42:20 PDT
WebKit Commit Bot
Comment 3 2017-03-15 12:56:08 PDT
Comment on attachment 304470 [details] Patch Clearing flags on attachment: 304470 Committed r214003: <http://trac.webkit.org/changeset/214003>
WebKit Commit Bot
Comment 4 2017-03-15 12:56:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.