WebContent crash due to bad variant access in WebKit: WebKit::WebPage::expandedRangeFromHandle https://bugs.webkit.org/show_bug.cgi?id=169657 <rdar://problem/30631070>

Reviewed by Tim Horton.

In WebPageIOS.mm, the call to unionDOMRanges from WebPage::expandedRangeFromHandle invokes
Range::compareBoundaryPoints, assuming that the return value is not an exception, and then attempts to perform
integer comparison on the result. This is one speculative cause of the web content crash in the radar.

There isn't a known way to reproduce this crash.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::unionDOMRanges):


Canonical link: https://commits.webkit.org/186678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214003 268f45cc-cd09-0410-ab3c-d52691b4dbfc